--- a/TestNinja.UnitTests/TestNinja.UnitTests.csproj
+++ b/TestNinja.UnitTests/TestNinja.UnitTests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="HtmlFormatterTest.cs" />
     <Compile Include="MathTests.cs" />
     <Compile Include="Mocking\OrderServiceTests.cs" />
+    <Compile Include="Mocking\ProductTests.cs" />
     <Compile Include="ReservationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StackTests.cs" />
